suite/tests/functions/valid/stack-aligned-simple.c
#include "utils.h"

int main(void)
{
    return is_rsp_16_byte_aligned();
}
