suite/tests/functions/invalid/redecl-of-empty-fn.c
int foo(void)
{
}

//
// Previous definition with no body is still a definition.
//
int foo(void)
{
}

int main(void)
{
}
